# bws

./: .dockerignore  .gitignore  COMPRESSION_IMPLEMENTATION.md  Cargo.toml  Cross.toml  DRY_RUN_FEATURE.md  Dockerfile  LICENSE  PUBLISHING.md  README.md  REPOSITORY_DESCRIPTION.md  RESTRUCTURING.md  SECURITY.md  STATIC_DEMO.md  WEBSOCKET_PROXY.md  bws-daemon.sh  config.toml  config_multisite_ssl.toml  deny.toml  docker-compose.test.yml  docker-compose.yml  docker-run.sh  simple_websocket_test.sh  test_headers.sh  test_load_balance.sh  test_load_balancing.toml  test_local_ci.sh  test_multisite.sh  test_proxy_config.toml  test_server.sh  test_static_server.sh  test_websocket_client.py  test_websocket_proxy.sh
.github/: dependency-review-config.yml
.github/workflows/: README.md  ci.yml  docker.yml  docs.yml  hot-reload-test.yml  integration-tests.yml  publish-crates.yml  release.yml  security.yml
docs/: DOCUMENTATION_UPDATES.md  book.toml  load-balancing.md  reverse-proxy.md
docs/architecture/: README.md
docs/examples/: multi-hostname-config.toml  virtual-hosting-config.toml
docs/features/: multi-hostname.md  virtual-hosting.md
docs/src/: SUMMARY.md  api.md  building.md  changelog.md  compression.md  config-schema.md  configuration.md  contributing.md  daemon.md  docker.md  faq.md  headers.md  health.md  hot-reload.md  installation.md  introduction.md  load-balancing.md  multi-site.md  performance.md  production.md  quick-start.md  reverse-proxy.md  security.md  ssl-tls.md  static-files.md  testing.md  troubleshooting.md
docs/theme/: custom.css
examples/: README.md  basic-single-site.toml  production-hot-reload.toml  production-multi-site.toml
scripts/: README-docker-clippy.md  cross-build.ps1  cross-build.sh  dev-setup.sh  docker-clippy-inline.ps1  monitor-deps.sh  update-static-paths.sh
src/: certificate_watcher.rs  lib.rs
src/config/: mod.rs  server.rs  site.rs
src/core/: cli.rs  hot_reload.rs  mod.rs  signals.rs  upgrade.rs  upgrade_new.rs  upgrade_old.rs
src/handlers/: api_handler.rs  health_handler.rs  mod.rs  proxy_handler.rs  proxy_handler_complex.rs  proxy_handler_simple.rs  static_handler.rs  websocket_proxy.rs
src/middleware/: compression.rs  mod.rs
src/monitoring/: certificates.rs  health.rs  metrics.rs  mod.rs
src/server/: config_reload.rs  dynamic_tls.rs  management_api.rs  mod.rs  reload_trait.rs  service.rs
src/ssl/: acme.rs  acme_old.rs  acme_simple.rs  certificate.rs  manager.rs  mod.rs  renewal.rs  renewal_scheduler.rs
static/: contact.html  index.html  styles.css  test.wasm
static-api/: index.html
static-blog/: index.html
static-dev/: index.html
static/docs/: index.html
tests/: HOT_RELOAD_TESTING.md  MULTISITE_SHARED_PORT_TEST.md  README.md  config_test.toml  daemon-test.toml  docker-test.bat  integration_multi_hostname.rs  integration_virtual_hosting.rs  run-tests.sh  run_hot_reload_tests.ps1  run_hot_reload_tests.sh  simple_websocket_test.sh  test_headers.sh  test_hot_reload.ps1  test_load_balance.sh  test_load_balancing.toml  test_local_ci.sh  test_multisite.sh  test_proxy_config.toml  test_static_server.sh  test_websocket_proxy.sh
tests/configs/: basic.toml  config_test.toml  daemon-test.toml  hot-reload.toml  invalid.toml  test_load_balancing.toml
tests/integration/: test_pingora_windows.rs
tests/scripts/: README.md  docker-test.sh  github_actions_simulation.sh  test_websocket_full.py  (+2 more)
(+15 files in other folders)
