[package]
name = "bws"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait="0.1"
pingora = { version = "0.6", features = [ "lb" ] }
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"