[package]
name = "bws-web-server"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "BWS (Ben's Web Server) - A high-performance multi-site web server built with Pingora"
repository = "https://github.com/benliao/bws"
homepage = "https://github.com/benliao/bws"
documentation = "https://github.com/benliao/bws"
keywords = ["web-server", "pingora", "multi-site", "proxy", "http"]
categories = ["web-programming::http-server", "network-programming"]
authors = ["Ben Liao <your-email@example.com>"]
readme = "README.md"
exclude = [
    "target/",
    ".github/",
    "*.log",
    "test_*.sh",
    "bws_config.toml"
]

[[bin]]
name = "bws-web-server"
path = "src/bin/main.rs"

[dependencies]
async-trait="0.1"
pingora = { version = "0.6", features = [ "lb" ] }
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"