[package]
name = "bws-web-server"
version = "0.1.9"
edition = "2021"
license = "MIT"
description = "BWS (Ben's Web Server) - A high-performance multi-site web server built with Pingora"
repository = "https://github.com/benliao/bws"
homepage = "https://github.com/benliao/bws"
documentation = "https://github.com/benliao/bws"
keywords = ["web-server", "pingora", "multi-site", "proxy", "http"]
categories = ["web-programming::http-server", "network-programming"]
authors = ["Ben Liao <your-email@example.com>"]
readme = "README.md"
exclude = [
    "target/",
    ".github/",
    "*.log",
    "test_*.sh",
    "bws_config.toml"
]

[[bin]]
name = "bws"
path = "src/bin/main.rs"

[dependencies]
async-trait="0.1"
pingora = { version = "0.6", features = [ "lb" ] }
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
num_cpus = "1.16"
tempfile = "3.8"
# SSL/TLS and ACME dependencies
rustls = "0.23"
rustls-pemfile = "2.0"
instant-acme = "0.6"
# Additional dependencies for SSL management
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
sha2 = "0.10"
x509-parser = "0.16"
rcgen = "0.12"
# File watching for auto-reload
notify = "6.0"
# Random number generation for load balancing
fastrand = "2.0"
# URL parsing for proxy upstream configuration
url = "2.4"
# WebSocket support for proxy
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.24"
futures-util = "0.3"
sha1 = "0.10"

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"